--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -50,13 +50,16 @@
 
 .navbar__nav-item--active {
   color: var(--color-white);
-  background-color: var(--color-dark-300);
+  background-color: var(--color-dark-200);
 }
 
 .navbar__nav-icon {
   width: 16px;
   height: 16px;
   opacity: 0.7;
+}
+.navbar__nav-icon:hover {
+  filter: brightness(0) saturate(100%) invert(100%);
 }
 
 .navbar__right {
