--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -72,27 +72,26 @@
   display: flex;
   align-items: center;
   gap: var(--space-2);
-  padding: var(--space-2) var(--space-4);
+  padding: var(--space-2) var(--space-3);
   background-color: var(--color-dark-200);
-  border: 1px solid var(--color-dark-400);
-  border-radius: var(--radius-md);
-  min-width: 240px;
-}
-
-.navbar__search-icon {
-  width: 16px;
-  height: 16px;
-  color: var(--color-gray-400);
+  border: 1px solid #191B18;
+  border-radius: 8px;
+  min-width: 320px;
 }
 
 .navbar__search-input {
   flex: 1;
-  font-size: var(--text-sm);
-  color: var(--color-gray-400);
+  border: none;
+  outline: none;
+  font-size: 14px;
+  font-family: jetbrains-mono, monospace;
+  color: var(--color-white-muted);
 }
 
 .navbar__search-input::placeholder {
   color: var(--color-gray-400);
+  font-size: 14px;
+  font-family: jetbrains-mono, monospace;
 }
 
 .navbar__search-shortcut {
@@ -115,16 +114,11 @@
   align-items: center;
   gap: var(--space-2);
   padding: var(--space-2) var(--space-3);
-  background-color: var(--color-dark-200);
-  border-radius: var(--radius-full);
+  border: 1px solid #191B18;
+  background-color: #121412;
+  border-radius: 8px;
 }
 
-.navbar__user-avatar {
-  width: 28px;
-  height: 28px;
-  border-radius: var(--radius-full);
-  object-fit: cover;
-}
 
 .navbar__user-name {
   font-size: var(--text-sm);
@@ -133,13 +127,16 @@
 
 /* Footer */
 .footer {
-  padding: var(--space-12) var(--space-6);
+  padding-top: 40px;
+  padding-right: 16px;
+  padding-bottom: 40px;
+  padding-left: 16px;
   background-color: var(--color-black);
   border-top: 1px solid var(--color-dark-300);
 }
 
 .footer__container {
-  max-width: 1200px;
+  
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -150,7 +147,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-6);
-  max-width: 320px;
+  max-width: 400px;
 }
 
 .footer__logo {
@@ -161,9 +158,13 @@
 }
 
 .footer__description {
-  font-size: var(--text-sm);
+  font-size: 14px;
+  letter-spacing: -4%;
+  line-height: 136%;
+  font-weight: 500;
+  font-family: JetBrains Mono, monospace;
   color: var(--color-gray-400);
-  line-height: 1.6;
+ 
 }
 
 .footer__right {
@@ -179,7 +180,8 @@
 
 .footer__link {
   font-size: var(--text-sm);
-  color: var(--color-gray-400);
+  color: var(--color-white);
+  font-weight: 700;
   transition: color var(--transition-fast);
 }
 
@@ -188,7 +190,7 @@
 }
 
 .footer__bottom {
-  max-width: 1200px;
+  
   margin: var(--space-10) auto 0;
   padding-top: var(--space-6);
   border-top: 1px solid var(--color-dark-300);
@@ -198,7 +200,8 @@
 }
 
 .footer__copyright {
-  font-size: var(--text-xs);
+  font-size: 14px;
+  letter-spacing: -4%;
   color: var(--color-gray-400);
 }
 
@@ -208,7 +211,8 @@
 }
 
 .footer__legal-link {
-  font-size: var(--text-xs);
+  font-size: 14px;
+  letter-spacing: -4%;
   color: var(--color-gray-400);
   transition: color var(--transition-fast);
 }
