--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -36,7 +36,7 @@
   display: flex;
   align-items: center;
   gap: var(--space-2);
-  padding: var(--space-2) var(--space-4);
+  padding: 10px var(--space-4);
   border-radius: var(--radius-md);
   color: var(--color-gray-400);
   font-size: var(--text-sm);
@@ -50,7 +50,20 @@
 
 .navbar__nav-item--active {
   color: var(--color-white);
-  background-color: var(--color-dark-200);
+
+  background: linear-gradient(#121412, #121412) padding-box,
+    linear-gradient(
+        278.35deg,
+        rgba(25, 27, 24, 0.1) -0.64%,
+        rgba(120, 120, 120, 0.1) 54.35%,
+        rgba(13, 15, 12, 0.1) 105.4%
+      )
+      padding-box,
+    linear-gradient(103.54deg, #121412 -17.82%, #272927 40.23%, #191b18 98.28%)
+      border-box;
+
+  border: 1px solid transparent;
+  border-radius: 8px;
 }
 
 .navbar__nav-icon {
@@ -72,9 +85,9 @@
   display: flex;
   align-items: center;
   gap: var(--space-2);
-  padding: var(--space-2) var(--space-3);
+  padding: var(--space-3) var(--space-3);
   background-color: var(--color-dark-200);
-  border: 1px solid #191B18;
+  border: 1px solid #191b18;
   border-radius: 8px;
   min-width: 320px;
 }
@@ -114,11 +127,19 @@
   align-items: center;
   gap: var(--space-2);
   padding: var(--space-2) var(--space-3);
-  border: 1px solid #191B18;
-  background-color: #121412;
+  background: linear-gradient(#121412, #121412) padding-box,
+    linear-gradient(
+        278.35deg,
+        rgba(25, 27, 24, 0.1) -0.64%,
+        rgba(120, 120, 120, 0.1) 54.35%,
+        rgba(13, 15, 12, 0.1) 105.4%
+      )
+      padding-box,
+    linear-gradient(103.54deg, #121412 -17.82%, #272927 40.23%, #191b18 98.28%)
+      border-box;
   border-radius: 8px;
+  border: 1px solid transparent;
 }
-
 
 .navbar__user-name {
   font-size: var(--text-sm);
@@ -136,7 +157,6 @@
 }
 
 .footer__container {
-  
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -164,7 +184,6 @@
   font-weight: 500;
   font-family: JetBrains Mono, monospace;
   color: var(--color-gray-400);
- 
 }
 
 .footer__right {
@@ -190,7 +209,6 @@
 }
 
 .footer__bottom {
-  
   margin: var(--space-10) auto 0;
   padding-top: var(--space-6);
   border-top: 1px solid var(--color-dark-300);
