--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -192,13 +192,13 @@ ol {
 }
 
 /* Selection */
-::selection {
+/* ::selection {
   background: var(--color-primary);
   color: var(--color-black);
-}
+} */
 
 /* Focus styles */
-:focus-visible {
-  outline: 2px solid var(--color-primary);
+/* :focus-visible {
+ 
   outline-offset: 2px;
-}
+} */
